/rock route complete

--- a/app/views/game_templates/play_rock.html.erb
+++ b/app/views/game_templates/play_rock.html.erb
@@ -1,3 +1,7 @@
-<h1>Howdy!</h1>
+<h2>We played rock!</h2>
 
-<%= @random_move %>
+<h2>They played <%= @comp_move %>!</h2>
+
+<h2>We <%= @outcome %>!</h2>
+
+<a href="/">Rules</a>
